tests/negative/gold/bad_export_test.gold
tests/negative/bad_export4.toit:7:8: error: Unresolved export 'foo'
export foo
       ^~~
tests/negative/bad_export3.toit:7:8: error: Unresolved export 'foo'
export foo
       ^~~
tests/negative/bad_export2.toit:7:8: error: Unresolved export 'foo'
export foo
       ^~~
tests/negative/bad_export_test.toit:8:3: error: Unresolved identifier: 'foo'
  foo
  ^~~
Compilation failed.
